--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,12 @@ pandas==0.23.4
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
+progress==1.4
 prompt-toolkit==1.0.15
 ptyprocess==0.6.0
 Pygments==2.2.0
 python-dateutil==2.7.3
+python-utils==2.3.0
 pytz==2018.5
 requests==2.19.1
 simplegeneric==0.8.1
